# fractal_explorer

./: CMakeLists.txt  README.md  kernel.cl  main.cpp
kernels/: kernel.cl  kernel_part_1.cl  kernel_part_2.cl
src/: app.cpp  app.h  camera.cpp  camera.h  cl_context.cpp  cl_context.h  fractal.cpp  fractal.h  render.cpp  render.h
src/fractals/: mandelbox.cpp  mandelbox.h  mandelbulb.cpp  mandelbulb.h  menger_sponge.cpp  menger_sponge.h  sierpinski_triangle.cpp  sierpinski_triangle.h
src/math/: quaternion.cpp  quaternion.h  vec3_ops.cpp  vec3_ops.h
